# DOTA-2-ban-pick-tool

./: .gitignore  LICENSE  pyproject.toml  readme.md  sample_query.json  sync_records_folder.sh
.streamlit/: config.toml
D2BP_API/: manage.py
D2BP_API/D2BP_API/: asgi.py  settings.py  urls.py  wsgi.py
D2BP_API/ranked_ap/: apps.py  models.py
Valve_resources/: scrape_image.py
Valve_resources/hero_wide_icons/: names.csv
data/notebook/: evaluate_cache_dict.ipynb  web_scraping.ipynb
data/notebook/<profile-folder>/: Last Version  Local State  SingletonCookie  SingletonLock  SingletonSocket
data/records/: counter_rate_matrix.pkl  default_pos_2_hero_pool.txt  default_pos_3_hero_pool.txt  default_pos_4_hero_pool.txt  default_pos_5_hero_pool.txt  hero_versus_with_winrate_dict.pkl  lane_rate_info_dict.pkl  readme.md  versus_winrate_matrix.pkl  with_winrate_matrix.pkl
dota_banpick/: 1_🎃_Homepage.py  __init__.py  __main__.py  alphabeta.py  alphabeta_captain.py  config.py  heuristic.py  pickaction.py  pickaction_captain.py  st_cache.py  update_time.txt  utils.py
dota_banpick.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dota_banpick/data/records/: counter_rate_matrix.pkl  default_pos_1_hero_pool.txt  default_pos_2_hero_pool.txt  default_pos_3_hero_pool.txt  default_pos_4_hero_pool.txt  default_pos_5_hero_pool.txt  depth_limit_1_warmup_cache_dict.pkl  (+12 more)
dota_banpick/pages/: 2_🌊_Edit_Hero_Pool.py  2_🐻_Heroes.py  3_🌊_Edit_Hero_Pool.py  3_🤕_BanPick.py  3_🤕_BanPick_普通模式.py  4_🐻_Heroes_Gallery.py  4_🔥_BanPick_队长模式.py  4_😎_Hero_Counter.py  4_🤕_BanPick.py  5_🐻_Heroes_Gallery.py  6_😎_Hero_Counter.py  6_😎_阵容克制.py
frontend/: manage.py
frontend/D2BP/: asgi.py  settings.py  urls.py  wsgi.py
frontend/core/: admin.py  models.py  views.py
preprocessing/notebook/: set_chinese_abbrev.py  stratz_api_calling.ipynb  stratz_api_calling.py  web_scraping.ipynb
preprocessing/records/: counter_rate_matrix.pkl  default_pos_1_hero_pool.txt  default_pos_2_hero_pool.txt  default_pos_3_hero_pool.txt  default_pos_4_hero_pool.txt  default_pos_5_hero_pool.txt  depth_limit_1_warmup_cache_dict.pkl  hero_abbrev.csv  hero_lanewin_versus_dict.pkl  hero_lanewin_with_dict.pkl  hero_versus_with_winrate_dict.pkl  hero_winrate_info_dict.pkl  heronames.csv  lane_rate_info_dict copy.pkl  lane_rate_info_dict.pkl  readme.md  synergy_rate_matrix.pkl  versus_winrate_matrix.pkl  with_winrate_matrix.pkl
react_frontend/: readme.md
react_frontend/user-console-app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+4007 files in other folders)
