[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "dota_banpick"
authors = [{name = "Sukai Huang", email = "huangsukai1997@gmail.com"}]
version = "0.5.0"
requires-python = ">=3.10"
description = "BP helper for DOTA 2"
readme = "readme.md"
dependencies = [
    "requests","pandas","numpy", "undetected-chromedriver",
    "tqdm","ipywidgets", "hydra-core", 
    "jupyterlab","selenium","django", "natsort", "Pillow",  "watchdog",
    "streamlit", "streamlit-option-menu", "streamlit-extras"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.setuptools]
include-package-data = true
packages = ["dota_banpick"]
package-dir = {"dota_banpick" = "dota_banpick"}
package-data = {"dota_banpick" = ["**/*"]} # include all of them


[project.scripts]
dota-banpick = "dota_banpick:main_cli"